Container eventioz on Mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -1206,6 +1206,10 @@ and (max-width : 767px) {
 	  margin: 0;
 	  padding: 8px;
 	}
+	
+	#tickets .container-eventioz{padding:0px;}
+	
+	#tickets .container-eventbrite {margin-top: -40px;}
 }
 
 /* Speaker Grid Responsive Fix----------- */
